--- a/modules/Base.html
+++ b/modules/Base.html
@@ -94,7 +94,7 @@
 
     
         <div class="foundat">
-            Defined in: <a href="../files/src_base.js.html#l17"><code>src&#x2F;base.js:17</code></a>
+            Defined in: <a href="../files/src_base.js.html#l17"><code>src\base.js:17</code></a>
         </div>
     
 
