--- a/files/src_base.js.html
+++ b/files/src_base.js.html
@@ -157,16 +157,29 @@ var Base = Class.create(Events, Aspect, {
   },
 
   /**
-   * 获取初始化后的参数
+   * 获取初始化后的参数，支持多级获取，如：this.option(&#x27;rules/remote&#x27;)
    *
    * @method option
    * @param {String} [key] 键
    * @return {Mixed} 整个参数列表或指定参数值
    */
   option: function (key) {
-    var options = this.__options;
-    return ((key === undefined) ? options :
-      (options.hasOwnProperty(key) ? options[key] : undefined));
+    var options = this.__options,
+      keyArr;
+
+    if (key !== undefined) {
+      keyArr = key.split(&#x27;/&#x27;);
+
+      while ((key = keyArr.shift())) {
+        if (options.hasOwnProperty(key)) {
+          options = options[key];
+        } else {
+          return undefined;
+        }
+      }
+    }
+
+    return options;
   },
 
   /**
