增加 `events` 的 `callback` 类型判断

--- a/test/base.html
+++ b/test/base.html
@@ -139,7 +139,8 @@
               this.t = t;
               this.e = e;
             },
-            test2: 'setup'
+            test2: 'setup',
+            test3: 'nothing'
           }
         });
         base.fire('test', '2');
