--- a/files/src_base.js.html
+++ b/files/src_base.js.html
@@ -234,6 +234,10 @@ var Base = Class.create(Events, Aspect, {
         callback = self[callback];
       }
 
+      if (typeof callback !== &#x27;function&#x27;) {
+        return true;
+      }
+
       if (match) {
         // AOP
         self[match[1]](match[2], callback);
