--- a/test/base.html
+++ b/test/base.html
@@ -86,7 +86,7 @@
         equal( baseA.state(), 1, '' );
       });
 
-      test('option', function() {
+      test('option/get', function() {
         var BaseA = Base.extend({
           defaults: {
             y: 5,
@@ -118,18 +118,23 @@
         deepEqual( baseA.option('events'), events, '' );
       });
 
-      test('data', function() {
+      test('option/set', function() {
         var BaseA = Base.extend({
         });
         var baseA = new BaseA({
         });
-        deepEqual( baseA.data(), {}, '' );
-        equal( baseA.data('a', '1'), baseA, '' );
-        equal( baseA.data('a'), '1', '' );
-        equal( baseA.data('hasOwnProperty'), undefined, 'built-in property returns undefined' );
-        equal( baseA.data('b'), undefined, '' );
-        equal( baseA.data({b: '2'}), baseA, '' );
-        deepEqual( baseA.data(), {a: '1', b: '2'}, '' );
+        equal( baseA.option('a/b/c/d', '1'), baseA, '' );
+        deepEqual( baseA.option('a'), {b:{c:{d:'1'}}}, '' );
+        deepEqual( baseA.option('a/b'), {c:{d:'1'}}, '' );
+        deepEqual( baseA.option('a/b/c'), {d:'1'}, '' );
+        deepEqual( baseA.option('a/b/c/d'), '1', '' );
+        deepEqual( baseA.option('a/b/c/d/e'), undefined, '' );
+        equal( baseA.option('hasOwnProperty'), undefined, '' );
+        equal( baseA.option('b'), undefined, '' );
+        equal( baseA.option({a: '2'}), baseA, '' );
+        equal( baseA.option('a'), '2', '' );
+        equal( baseA.option('a/b'), undefined, '' );
+        deepEqual( baseA.option(), {a: '2'}, '' );
       });
 
       test('events', function() {
@@ -154,16 +159,16 @@
       test('AOP', function() {
         var BaseA = Base.extend({
           hello: function () {
-            return 'hello ' + this.data('world');
+            return 'hello ' + this.option('world');
           }
         });
         var baseA = new BaseA({
           events: {
             'before:hello': function () {
-              if (this.data('world') === 'mars') {
+              if (this.option('world') === 'mars') {
                 return false;
               }
-              this.data('world', 'mars');
+              this.option('world', 'mars');
               ok( true, 'before called');
             },
             'after:hello': function (e, result) {
