--- a/files/src_base.js.html
+++ b/files/src_base.js.html
@@ -162,16 +162,17 @@ var Base = Class.create(Events, Aspect, {
    * @method option
    * @param {String} [key] 键
    * @param {Mixed} [value] 值
+   * @param {Object} [context] 上下文
    * @return {Mixed} 整个参数列表或指定参数值
    */
-  option: function (key, value) {
-    var options = this.__options;
+  option: function (key, value, context) {
+    var options = context || this.__options;
 
     if (key === undefined) {
       return options;
     }
 
-    function getOption () {
+    function get () {
       var keyArr = key.split(&#x27;/&#x27;);
 
       while ((key = keyArr.shift())) {
@@ -185,7 +186,7 @@ var Base = Class.create(Events, Aspect, {
       return options;
     }
 
-    function setOption () {
+    function set () {
       var keyMap = {};
 
       function recruit (obj, arr) {
@@ -201,20 +202,20 @@ var Base = Class.create(Events, Aspect, {
 
       recruit(keyMap, key.split(&#x27;/&#x27;));
 
-      extendOption(keyMap);
+      extend(keyMap);
     }
 
-    function extendOption (obj) {
+    function extend (obj) {
       $.extend(true, options, obj);
     }
 
     if ($.isPlainObject(key)) {
-      extendOption(key);
+      extend(key);
     } else {
       if (value === undefined) {
-        return getOption();
+        return get();
       } else {
-        setOption();
+        set();
       }
     }
 
