--- a/test/base.html
+++ b/test/base.html
@@ -71,7 +71,9 @@
         });
         var baseA = new BaseA({
         });
+        console.log(baseA);
         baseA.destroy();
+        console.log(baseA);
         baseA.destroy();
         equal( baseA.__options, undefined, '' );
       });
