--- a/test/isobj.html
+++ b/test/isobj.html
@@ -12,7 +12,6 @@
   <h2 id="qunit-userAgent"></h2>
   <ol id="qunit-tests"></ol>
   <div id="qunit-fixture">test markup</div>
-  <script src="../vendor/jquery/jquery.js"></script>
   <script src="../vendor/seajs/sea.js"></script>
   <script src="../vendor/qunit/qunit.js"></script>
   <script>
@@ -20,23 +19,23 @@
 
     seajs.config({
       'base': '../sea-modules/',
-      'map': [
-        ['/sea-modules/jquery', '/vendor/jquery/jquery']
-      ],
       'alias': {
-        '$': 'jquery',
+        '$': 'jquery/jquery/1.11.1/jquery',
         'class': 'pandora/class/1.0.0/class',
         'events': 'pandora/events/1.0.0/events'
       }
     });
 
     function isObj (obj) {
-      return Object.prototype.toString.call(obj) === '[object Object]' &&
-          obj.constructor &&
-          obj.constructor.prototype.hasOwnProperty('isPrototypeOf');
+      return !!(obj &&
+                Object.prototype.toString.call(obj) === '[object Object]' &&
+                obj.constructor &&
+                // obj.constructor.prototype &&
+                obj.constructor.prototype.hasOwnProperty &&
+                obj.constructor.prototype.hasOwnProperty('isPrototypeOf'));
     }
 
-    seajs.use(['../src/base'], function (Base) {
+    seajs.use(['$', '../src/base'], function ($, Base) {
 
       'use strict';
 
